Avoids little gap

--- a/pages/Services.module.css
+++ b/pages/Services.module.css
@@ -80,7 +80,7 @@
   padding-top: 0;
   background-color: var(--background);
   z-index: 4; /* above 'main' + flying images */
-  top: calc(var(--navTop) + var(--navHeight) - 1px);
+  top: calc(var(--navTop) + var(--navHeight) - 10px);
   transition: top 0.3s; /* matches SiteNav */
   border-top: 1px solid var(--hr);
 }
